# MXDownloader

./: .gitignore  .mailmap  README.md  config.yaml  docker-compose.yml  install-launchd.command  pyproject.toml  restart.command  start.bat  start.command
app/: config.py  db.py  main.py
app/api/: files.py  playlists.py  routes.py  skills.py  web.py
app/engines/: alist.py  aria2.py  base.py  ytdlp.py
app/models/: playlist.py  task.py
app/services/: engine_router.py  engine_status.py  file_manager.py  playlist_service.py  task_manager.py
app/utils/: encoding.py  media.py  url_extract.py
app/web/static/: style.css
app/web/templates/: base.html  components.html  dashboard.html  files.html  media.html  settings.html
app/web/templates/partials/: components_status.html  install_help_alist.html  install_help_aria2.html  install_help_ytdlp.html  task_table.html  task_tabs.html
deploy/: family-mediacenter.plist  mydownloader.plist
docs/: DEPLOY_MAC.md
mcp_server/: server.py
scripts/: install-launchd.sh  install-mac.sh  install-workbuddy-skill.ps1  install-workbuddy-skill.sh  restart.sh  start.ps1  start.sh
scripts/lib/: python.sh
skills/family-mediacenter/: SKILL.md
skills/family-mediacenter/references/: api.md
skills/mydownloader/: SKILL.md
skills/mydownloader/references/: api.md
