[project]
name = "mydownloader"
version = "0.1.0"
description = "Local download service with yt-dlp, aria2, and Alist support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "aria2p>=0.11.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "mcp>=1.0.0",
]

[project.scripts]
mydownloader = "app.main:run"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
