[project]
name = "family_mediacenter"
version = "0.1.0"
description = "Family Media Center — local download and media management (yt-dlp, aria2, Alist)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "aria2p>=0.11.3",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
family-mediacenter = "app.main:run"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
